--- a/cart/index.html
+++ b/cart/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <header>
+        <a href="../">Home</a>
+        <a href="../product">Browse Agents</a>
+        <a href="../cart">Shopping Cart</a>
+    </header>
     <table>
         <thead>
             <tr>
