--- a/Product/index.html
+++ b/Product/index.html
@@ -14,26 +14,26 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
-        </div>
+        <a href="../">Home</a>
+        <a href="../product">Browse Agents</a>
+        <a href="../cart">Shopping Cart</a>
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="assets/alchemy-logo.png" />
-            <h2>
-                Welcome to Alchemy Bootstrap!
-            </h2>
+            <img class="main-logo" src="../assets/big-logo.png" />
+
+            <ul id="list">
+
+            </ul>
 
 
-            <hr />
         </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./products.js"></script>
 </body>
 
 </html>
