--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
+            <img src="./assets/big-logo.png" />
         </div>
+        <a href="./">Home</a>
+        <a href="./product">Browse Agents</a>
+        <a href="./cart">Shopping Cart</a>
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="assets/alchemy-logo.png" />
+            <img class="main-logo" src="./assets/alchemy-logo.png" />
             <h2>
                 Welcome to Alchemy Bootstrap!
             </h2>
@@ -29,39 +32,10 @@
         </section>
 
         <h1>Fruit Stand Shopping Cart</h1>
-        <nav>
-            <a href="../">Home</a>
-            <a href="../products">Browse Agents</a>
-            <a href="./shopping-cart">Shopping Cart</a>
-        </nav>
+
         </header>
 
         <main>
-            <table>
-                <thead>
-                    <tr>
-                        <th class="align-left">Repo Professionals</th>
-                        <th>Qty (Contracted Days)</th>
-                        <th>Price</th>
-                        <th>Total</th>
-                    </tr>
-                </thead>
-
-                <tbody></tbody>
-
-                <tfoot>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th>Order Total:</th>
-                        <th id="order-total-cell"></th>
-                    </tr>
-                </tfoot>
-            </table>
-
-            <p class="order-now-container">
-                <button>Place Order</button>
-            </p>
         </main>
 
         <script type="module" src="cart.js"></script>
