created for loop for lis

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         </section>
 
-        <h1>Fruit Stand Shopping Cart</h1>
+        <h1>Repo Agents<a href="./Product/index.html">here</a></h1>
 
         </header>
 
