--- a/cart/index.html
+++ b/cart/index.html
@@ -24,7 +24,7 @@
             </tr>
         </thead>
 
-        <tbody></tbody>
+        <tbody id="tBody"></tbody>
 
         <tfoot>
             <tr>
@@ -41,7 +41,7 @@
     </p>
     </main>
 
-    <script type="module" src="cart.js"></script>
+    <script type="module" src="./cartUtils.js"></script>
 </body>
 
 </html>
