--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <main>
         </main>
 
-        <script type="module" src="cart.js"></script>
+        <script type="module" src="./app.js"></script>
 </body>
 
 </html>
